[package]
name = "rulloc"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/antoniosarosi/rulloc"
license-file = "LICENCE"
readme = "README.md"
description = "General purpose memory allocator"
categories = ["memory-management"]
keywords = ["memory-allocator"]

[target.'cfg(unix)'.dependencies]
libc = "0.2.137"

[target.'cfg(windows)'.dependencies.windows]
version = "0.43.0"
default-features = false
features = [
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
]
